@@ -4,7 +4,9 @@ AS OF 20251218
 
 - Permit js=-2 for any stream operation.
 - More efficient StartRun (MATLAB).
+- Add GetOneBoxAddrs.
 - Add GetProbeAddrs.
+- Add SelectDevices.
 
 ==============
 AS OF 20250930
